<resources>
    <string name="app_name">Store Inventory App</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="sell">Sell</string>
    <string name="remove_1">Remove ( - 1)</string>
    <string name="recive_1">Recive ( + 1 )</string>
    <string name="order">Order</string>
    <string name="details_activity_title">Product Details</string>
    <string name="editor_activity_add_product">Add New Product</string>
    <string name="editor_activity_edit_product">Edit Product</string>
    <string name="action_edit">Edit</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete_all_data_dialog_msg">Delete all products?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="details_quantity_empty">No products available!</string>
    <string name="dolar">$</string>
    <string name="qty">Qty.:</string>
    <string name="it_s_empty_store">It\'s empty store</string>
    <string name="get_started_by_adding_a_product">Get started by adding a product</string>
</resources>
