<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            style="@style/DetailActivityTextStyle"/>
        <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            style="@style/DetailActivityDbTextStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            style="@style/DetailActivityTextStyle"/>
        <TextView
            android:id="@+id/product_price"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            style="@style/DetailActivityDbTextStyle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dolar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            style="@style/DetailActivityTextStyle"/>
        <TextView
            android:id="@+id/product_quantity"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            style="@style/DetailActivityDbTextStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name"
            style="@style/DetailActivityTextStyle"/>
        <TextView
            android:id="@+id/supplier_name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            style="@style/DetailActivityDbTextStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone_number"
            style="@style/DetailActivityTextStyle"/>
        <TextView
            android:id="@+id/supplier_phone_number"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            style="@style/DetailActivityDbTextStyle"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <Button
            android:id="@+id/remove"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/remove_1"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorAccentText"/>
        <Button
            android:id="@+id/recive"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/recive_1"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorAccentText"/>
    </LinearLayout>

        <Button
            android:id="@+id/order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/order"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorAccentText"/>
</LinearLayout>